<!--
  ~ Copyright 2018 Lithium Technologies Pvt Ltd
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="undefined">undefined</string>

    <string name="clientId"><!--PLEASE ADD THE CLIENT ID HERE--></string>
    <string name="clientSecret"><!--PLEASE ADD THE CLIENT SECRET HERE--></string>
    <string name="clientName"><!--PLEASE ADD THE CLIENT NAME HERE--></string>
    <string name="tenantId"><!--PLEASE ADD THE CLIENT TENANT ID HERE--></string>
    <string name="communityUrl"><!--PLEASE ADD THE COMMUNITY BASE URL HERE--></string>
    <string name="sample_sso_token"><!--PLEASE ADD THE SSO TOKEN HERE--></string>

    <string name="app_name">Lia Demo</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Community</string>
    <string name="title_activity_init">Initialize Community</string>
    <string name="support_activity_description">Browse through \'%s\' community.</string>


    <string name="login">Login</string>
    <string name="browse">Browse</string>
    <string name="logout">Logout</string>
    <string name="login_type_sso">Use SSO Login</string>
    <string name="login_type_user">User Login</string>
    <string name="hint_sso_token">SSO Token</string>
    <string name="browse_anonymous">Browse Anonymously</string>
    <string name="general_discussion">General Discussion</string>
    <string name="user_details">Logged in as \'%1$s &lt;%2$s&gt;\', Browse through \'%3$s\' Community</string>

    <string name="error_credentials_not_set">Error: Credentials not set. Update credentials to continue!</string>

    <string name="error_logout_failed">Logout failed</string>

</resources>
