<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 Lithium Technologies Pvt Ltd
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/activity_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="96dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/support_activity_description"
            android:textSize="@dimen/generic_text_size" />

        <ProgressBar
            android:id="@+id/login_progress"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_below="@id/activity_description"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:indeterminate="true"
            android:indeterminateOnly="true"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/layout_login_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_progress"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/login" />

            <Button
                android:id="@+id/btn_launch_anonymous"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/browse_anonymous" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_sso_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_login_controls"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkbox_sso_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/login_type_sso" />

            <EditText
                android:id="@+id/txt_sso_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:hint="@string/hint_sso_token"
                android:inputType="textPassword"
                android:text="@string/sample_sso_token"
                android:visibility="invisible" />

        </LinearLayout>

        <include
            android:id="@+id/layout_sdk_initialization_error"
            layout="@layout/layout_sdk_initialization_errors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_sso_controls"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>